(fix) checkbox size on mobile --3rd attempt

--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -42,8 +42,8 @@
   border-radius: 10%;
   color: transparent;
   line-height: 14px;
-  text-align: left;
   margin: 4px 4px 0px 0px;
+  width: 16px;
 }
 .form__checkbox:checked + .form__label:before {
   color: black;
